--- a/mobile-proffy/package.json
+++ b/mobile-proffy/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "@expo-google-fonts/archivo": "^0.2.3",
     "@expo-google-fonts/poppins": "^0.2.3",
-    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
@@ -20,13 +19,18 @@
     "expo-app-loading": "^2.1.1",
     "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
-    "react": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-picker-modal-view": "^1.3.2",
+    "react-native-picker-select": "^9.0.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "undefined": "@expo-googlÃe-fonts/poppins"
+    "react-native-web": "^0.19.9",
+    "undefined": "@expo-googlÃe-fonts/poppins",
+    "expo-splash-screen": "~0.20.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
