--- a/mobile-proffy/package.json
+++ b/mobile-proffy/package.json
@@ -15,9 +15,11 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
+    "axios": "^1.6.2",
     "expo": "^49.0.18",
     "expo-app-loading": "^2.1.1",
     "expo-font": "~11.4.0",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -30,7 +32,7 @@
     "react-native-screens": "~3.22.0",
     "react-native-web": "^0.19.9",
     "undefined": "@expo-googlÃe-fonts/poppins",
-    "expo-splash-screen": "~0.20.5"
+    "@react-native-async-storage/async-storage": "1.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
